# MiragineWarProtocol

./: .gitmodules  CMakeLists.txt  PacketOpcodes.hpp
include/MWProtocol/: MessageIdentifiers.hh
protos/: MatchConfirmationNotify.proto  MatchFinishedNotify.proto  MatchmakingReq.proto  MatchmakingRsp.proto  OpponentDisconnectionNotify.proto  ShowMessageNotify.proto
